--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 </strong>
+<!-- Modal structure -->
+<div id="pokemon-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2 class="modal-title"></h2>
+        <p class="modal-details"></p>
+        <img class="modal-image" src="" alt="Pokémon image">
+    </div>
+</div>
 </body>
 </html>
 
