--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 </strong>
-<!-- Modal structure -->
+<!-- Modal structure here -->
 <div id="pokemon-modal" class="modal">
     <div class="modal-content">
         <span class="close-button">&times;</span>
