--- a/index.html
+++ b/index.html
@@ -10,55 +10,20 @@
     <h1>Pokémon Repository</h1>
     <!-- Unordered list to display the Pokémon -->
     <ul class="pokemon-list"></ul>
-<strong>
+
+    <!-- Modal structure here -->
+    <div id="pokemon-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 class="modal-title"></h2>
+            <p class="modal-details"></p>
+            <img class="modal-image" src="" alt="Pokémon image">
+        </div>
+    </div>
+
+    <!-- JavaScript files -->
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
-</strong>
-<!-- Modal structure here -->
-<div id="pokemon-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-button">&times;</span>
-        <h2 class="modal-title"></h2>
-        <p class="modal-details"></p>
-        <img class="modal-image" src="" alt="Pokémon image">
-    </div>
-</div>
 </body>
 </html>
-
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-  
-
-
-
-
-
-
-
-
-
-
-
-    
-
