--- a/index.html
+++ b/index.html
@@ -1,41 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Repository</title>
-    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <style>
+        /* Custom styles */
+        .pokemon-button {
+            width: 100%;
+            margin-bottom: 5px;
+        }
+        .modal-image {
+            width: 100%;
+            height: auto;
+            max-width: 200px;
+        }
+        .pokemon-list {
+            list-style-type: none;
+            padding: 0;
+        }
+    </style>
 </head>
-
 <body>
-    <h1>Pokémon Repository</h1>
-    <!-- Unordered list to display the Pokémon -->
-    <ul class="pokemon-list"></ul>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Pokémon Repository</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <!-- Modal structure here -->
-    <div id="pokemon-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2 class="modal-title"></h2>
-            <p class="modal-details"></p>
-            <img class="modal-image" src="" alt="Pokémon image">
+    <!-- Main content -->
+    <div class="container mt-4">
+        <h1>Pokémon Repository</h1>
+        <ul class="pokemon-list list-group"></ul>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="pokemon-modal" tabindex="-1" role="dialog" aria-labelledby="pokemonModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title modal-title" id="pokemonModalLabel">Pokémon Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="modal-details"></p>
+                    <img class="modal-image" src="" alt="Pokémon image">
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- JavaScript files -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-        
-    <script src="js/promise-polyfill.js"></script>
-    <script src="js/fetch-polyfill.js"></script>
-    <script src="js/scripts.js"></script>
-</body>
+    <!-- JavaScript -->
+    <!-- jQuery, Popper.js, and Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
 
+    <script>
+        // IIFE to encapsulate the repository and keep global state clean
+        let pokemonRepository = (function () {
+            let pokemonList = [];
+            let apiUrl = 'https://pokeapi.co/api/v2/pokemon/?limit=150';
+
+            function add(pokemon) {
+                pokemonList.push(pokemon);
+            }
+
+            function getAll() {
+                return pokemonList;
+            }
+
+            function loadList() {
+                return fetch(apiUrl)
+                    .then(response => response.json())
+                    .then(json => {
+                        json.results.forEach(item => {
+                            let pokemon = {
+                                name: item.name,
+                                detailsUrl: item.url
+                            };
+                            add(pokemon);
+                        });
+                    })
+                    .catch(error => console.error(error));
+            }
+
+            function loadDetails(pokemon) {
+                return fetch(pokemon.detailsUrl)
+                    .then(response => response.json())
+                    .then(details => {
+                        pokemon.imageUrl = details.sprites.front_default;
+                        pokemon.height = details.height;
+                        pokemon.types = details.types.map(typeInfo => typeInfo.type.name).join(', ');
+                    })
+                    .catch(error => console.error(error));
+            }
+
+            function addListItem(pokemon) {
+                let pokemonListElement = document.querySelector('.pokemon-list');
+                let listItem = document.createElement('li');
+                listItem.classList.add('list-group-item');
+
+                let button = document.createElement('button');
+                button.innerText = pokemon.name;
+                button.classList.add('btn', 'btn-primary', 'pokemon-button');
+
+                button.setAttribute('data-toggle', 'modal');
+                button.setAttribute('data-target', '#pokemon-modal');
+
+                listItem.appendChild(button);
+                pokemonListElement.appendChild(listItem);
+
+                button.addEventListener('click', function () {
+                    loadDetails(pokemon).then(function () {
+                        showDetails(pokemon);
+                    });
+                });
+            }
+
+            function showModal(title, details, imageUrl) {
+                let modalTitle = document.querySelector('.modal-title');
+                let modalDetails = document.querySelector('.modal-details');
+                let modalImage = document.querySelector('.modal-image');
+
+                modalTitle.innerText = title;
+                modalDetails.innerText = details;
+                modalImage.src = imageUrl;
+
+                $('#pokemon-modal').modal('show');
+            }
+
+            function showDetails(pokemon) {
+                showModal(
+                    pokemon.name,
+                    `Height: ${pokemon.height}m, Types: ${pokemon.types}`,
+                    pokemon.imageUrl
+                );
+            }
+
+            return {
+                add: add,
+                getAll: getAll,
+                loadList: loadList,
+                addListItem: addListItem,
+                loadDetails: loadDetails
+            };
+        })();
+
+        pokemonRepository.loadList().then(function () {
+            pokemonRepository.getAll().forEach(function (pokemon) {
+                pokemonRepository.addListItem(pokemon);
+            });
+        });
+    </script>
+</body>
 </html>
