--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <!-- Link to minified CSS in dist folder -->
+    <link rel="stylesheet" href="dist/css/styles.min.css">
     <style>
         /* Custom styles */
         .pokemon-button {
@@ -69,6 +71,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+    <!-- Link to minified JavaScript in dist folder -->
+    <script src="dist/js/app.min.js"></script>
 
     <script>
         // IIFE to encapsulate the repository and keep global state clean
